# Simulation

./: Cargo.toml
src/: constants.rs  fps_text.rs  main.rs
src/components/: character.rs  entity.rs  item_pack.rs  memory.rs  mod.rs  passage.rs  tiles.rs
src/objects/: basic.rs
src/physics/: control.rs  mod.rs  wall.rs
src/scenes/: maze.rs  mod.rs  park.rs  scpf.rs
src/scenes/shared/: character.rs  elevator.rs  memory.rs  mod.rs
src/semiology/: composed.rs  mod.rs  referent.rs  signifier.rs
src/thaumatology/: magic.rs  mod.rs  rune.rs
